welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: Int does not take parameters
		recule (getMondeHauteur()-decalage(i))
                                                  ^